found the overflow css property which seems to fix the collapse issue i've been having!

--- a/screen.css
+++ b/screen.css
@@ -1,10 +1,14 @@
+div.banner {
+    height:12em;
+}
+
 img.banner {
-    position:relative;
+    float:left;
 }
 
 #bannerText {
     width:28em;
-    top:-76px;
+    margin-top:1em;
 }
 
 .login {
@@ -60,7 +64,7 @@ div.nav {
     font-size:1.4em;
     text-align:right;
     padding-right:.4em;
-    padding-bottom:.4em;
+    margin-bottom:.4em;
     color:#274e13;
 }
 
@@ -91,11 +95,10 @@ div.stripe {
     background-repeat:repeat-x;
     margin-bottom:1em;
     border-bottom:.15em solid #666666;
-    position:relative;
-    top:-62px;
 }
 
 .footer {
+    clear:both;
     color:#274e13;
 }
 
@@ -120,6 +123,7 @@ div.foot-content {
 div.slide {
     border:.15em solid #666666;
     border-bottom:none;
+    overflow:hidden;
 }
 
 div.fixed-height {
@@ -144,22 +148,16 @@ div.fixed-height {
     padding-right:2em;
 }
 
-ul.links {
-    margin:0em;
-    padding:0em;
-    padding-top:1em;
-    list-style-type:none;
-    font-size:1.2em;
-}
-
 div.link {
     text-align:center;
     padding:1em;
+    float: left;
     width: 40%;
 }
 
 img.link {
     width:80%;
+    height: 216px;
 }
 
 table.projects {
